added slides folder, Tarah's dplyr code, and about 3/4 done day 1

--- a/_site.yml
+++ b/_site.yml
@@ -38,5 +38,5 @@ navbar:
     href: https://github.com/ucvm/rbootcamp
 output:
   html_document:
-    theme: sandstone
+    theme: simplex
 output_dir: "."
